translation-sprint-3-2022: - translation part 5

--- a/src/app/pages/b2c-voucher/edit/tab/list-detail-voucher/list-detail-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/list-detail-voucher/list-detail-voucher.component.html
@@ -21,26 +21,26 @@
     <form [formGroup]="formFilter" autoComplete="off">
       <div class="pl-16 pr-16 mt-8 bb" fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="10px">
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="National" formControlName="national">
+          <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national">
             <mat-option [value]="item.id" *ngFor="let item of listLevelArea">{{item.name}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="Zone" formControlName="zone" multiple>
+          <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ? 'Semua
               Zona' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="Regional" formControlName="region" multiple>
+          <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all' ? 'Semua
               Regional' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-          <mat-select placeholder="Area" formControlName="area" multiple>
+          <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ? 'Semua
               Area' :
               item.code}}</mat-option>
