--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -237,7 +237,7 @@
           *ngIf="formAudience.controls['geotree_checkbox'].value === true"
         >
           <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="National" formControlName="national">
+            <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national">
               <mat-option
                 *ngFor="let item of listLevelArea"
                 [value]="item.id"
@@ -246,7 +246,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Zone" formControlName="zone" multiple>
+            <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
               <mat-option
                 *ngFor="let item of filteringGeotree(list['zone'])"
                 [value]="item.id"
@@ -259,7 +259,7 @@
           </mat-form-field>
           <mat-form-field fxFlex="12%" class="is-light form-primary">
             <mat-select
-              placeholder="Regional"
+              placeholder="{{'global.area.regional' | translate}}"
               formControlName="region"
               multiple
             >
@@ -276,7 +276,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Area" formControlName="area" multiple>
+            <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
               <mat-option
                 *ngFor="let item of filteringGeotree(list['area'])"
                 [value]="item.id"
@@ -289,7 +289,7 @@
           </mat-form-field>
           <mat-form-field fxFlex="12%" class="is-light form-primary">
             <mat-select
-              placeholder="Salespoint"
+              placeholder="{{'global.area.salespoint' | translate}}"
               formControlName="salespoint"
               multiple
             >
@@ -307,7 +307,7 @@
           </mat-form-field>
           <mat-form-field fxFlex="12%" class="is-light form-primary">
             <mat-select
-              placeholder="District"
+              placeholder="{{'global.area.district' | translate}}"
               formControlName="district"
               multiple
             >
@@ -325,7 +325,7 @@
           </mat-form-field>
           <mat-form-field fxFlex="12%" class="is-light form-primary">
             <mat-select
-              placeholder="Territory"
+              placeholder="{{'global.area.territory' | translate}}"
               formControlName="territory"
               multiple
             >
