--- a/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
+++ b/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
@@ -109,12 +109,12 @@
               <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="pt-16"
                 fxLayoutGap="20px" fxLayoutGap.lt-md="0px" *ngIf="isTargetedRetailer.value === true">
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="National" formControlName="national">
+                  <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national">
                     <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{ item.name }}</mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Zone" formControlName="zone" multiple>
+                  <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{
                       item.name === "all" ? "Semua
                       Zona" : item.code
@@ -122,7 +122,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region" multiple>
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{
                       item.name === "all"
                       ? "Semua
@@ -132,7 +132,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Area" formControlName="area" multiple>
+                  <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{
                       item.name === "all" ? "Semua
                       Area" : item.code
@@ -140,7 +140,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+                  <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{
                       item.name === "all"
                       ? "Semua
@@ -150,7 +150,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="District" formControlName="district" multiple>
+                  <mat-select placeholder="{{'global.area.district' | translate}}" formControlName="district" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{
                       item.name === "all"
                       ? "Semua
@@ -160,7 +160,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Territory" formControlName="territory" multiple>
+                  <mat-select placeholder="{{'global.area.territory' | translate}}" formControlName="territory" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{
                       item.name === "all"
                       ? "Semua
