--- a/src/app/pages/sku-management/db-product-submission/edit/edit.component.html
+++ b/src/app/pages/sku-management/db-product-submission/edit/edit.component.html
@@ -147,7 +147,7 @@
                 <input
                   matInput
                   type="text"
-                  placeholder="Zone"
+                  placeholder="{{'global.area.zone' | translate}}"
                   formControlName="businessZone"
                 />
                 <mat-error *ngIf="hasError('businessZone')">
@@ -160,7 +160,7 @@
                 <input
                   matInput
                   type="text"
-                  placeholder="Regional"
+                  placeholder="{{'global.area.regional' | translate}}"
                   formControlName="businessRegional"
                 />
                 <mat-error *ngIf="hasError('businessRegional')">
@@ -173,7 +173,7 @@
                 <input
                   matInput
                   type="text"
-                  placeholder="Area"
+                  placeholder="{{'global.area.area' | translate}}"
                   formControlName="businessArea"
                 />
                 <mat-error *ngIf="hasError('businessArea')">
