--- a/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
+++ b/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
@@ -108,7 +108,7 @@
                 </mat-select>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Regional" formControlName="region"
+                <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                   
                   (selectionChange)="getAudienceArea('area', formAdmin.get('region').value)" id="area1_region">
                   <mat-option *ngFor="let item of list['region']" [value]="item.id">
@@ -190,7 +190,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region"
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                     
                     (selectionChange)="getAudienceArea2('area', formArea2.get('region').value)" id="area2_region">
                     <mat-option *ngFor="let item of list2['region']" [value]="item.id">
@@ -274,7 +274,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region"
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                     
                     (selectionChange)="getAudienceArea3('area', formArea3.get('region').value)" id="area3_region">
                     <mat-option *ngFor="let item of list3['region']" [value]="item.id">
@@ -358,7 +358,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region"
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                     
                     (selectionChange)="getAudienceArea4('area', formArea4.get('region').value)" id="area4_region">
                     <mat-option *ngFor="let item of list4['region']" [value]="item.id">
@@ -442,7 +442,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region"
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                     matTooltip="{{getToolTipData(formArea5.get('region').value, list5['region'])}}"
                     (selectionChange)="getAudienceArea5('area', formArea5.get('region').value)" id="area5_region">
                     <mat-option *ngFor="let item of list5['region']" [value]="item.id">
@@ -526,7 +526,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region"
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                     matTooltip="{{getToolTipData(formArea6.get('region').value, list6['region'])}}"
                     (selectionChange)="getAudienceArea6('area', formArea6.get('region').value)" id="area6_region">
                     <mat-option *ngFor="let item of list6['region']" [value]="item.id">
@@ -610,7 +610,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region"
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                     matTooltip="{{getToolTipData(formArea7.get('region').value, list7['region'])}}"
                     (selectionChange)="getAudienceArea7('area', formArea7.get('region').value)" id="area7_region">
                     <mat-option *ngFor="let item of list7['region']" [value]="item.id">
@@ -694,7 +694,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region"
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                     matTooltip="{{getToolTipData(formArea8.get('region').value, list8['region'])}}"
                     (selectionChange)="getAudienceArea8('area', formArea8.get('region').value)" id="area8_region">
                     <mat-option *ngFor="let item of list8['region']" [value]="item.id">
@@ -778,7 +778,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region"
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                     matTooltip="{{getToolTipData(formArea9.get('region').value, list9['region'])}}"
                     (selectionChange)="getAudienceArea9('area', formArea9.get('region').value)" id="area9_region">
                     <mat-option *ngFor="let item of list9['region']" [value]="item.id">
@@ -862,7 +862,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region"
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region"
                     matTooltip="{{getToolTipData(formArea10.get('region').value, list10['region'])}}"
                     (selectionChange)="getAudienceArea10('area', formArea8.get('region').value)" id="area10_region">
                     <mat-option *ngFor="let item of list10['region']" [value]="item.id">
