--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -278,12 +278,12 @@
                 <div class="pl-16 pr-16 mt-8 bb" fxLayout="row wrap" fxLayoutAlign="space-between center"
                   fxLayoutGap="20px">
                   <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-                    <mat-select placeholder="National" formControlName="national">
+                    <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national">
                       <mat-option [value]="item.id" *ngFor="let item of listLevelArea">{{item.name}}</mat-option>
                     </mat-select>
                   </mat-form-field>
                   <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-                    <mat-select placeholder="Zone" formControlName="zone" multiple>
+                    <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
                       <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name ===
                         'all' ? 'Semua
                         Zona' :
@@ -291,7 +291,7 @@
                     </mat-select>
                   </mat-form-field>
                   <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-                    <mat-select placeholder="Regional" formControlName="region" multiple>
+                    <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" multiple>
                       <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name
                         === 'all' ? 'Semua
                         Regional' :
@@ -299,7 +299,7 @@
                     </mat-select>
                   </mat-form-field>
                   <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-                    <mat-select placeholder="Area" formControlName="area" multiple>
+                    <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
                       <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name ===
                         'all' ? 'Semua
                         Area' :
@@ -307,7 +307,7 @@
                     </mat-select>
                   </mat-form-field>
                   <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-                    <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+                    <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" multiple>
                       <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">
                         {{item.name === 'all' ? 'Semua
                         Salespoint' :
@@ -315,7 +315,7 @@
                     </mat-select>
                   </mat-form-field>
                   <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-                    <mat-select placeholder="District" formControlName="district" multiple>
+                    <mat-select placeholder="{{'global.area.district' | translate}}" formControlName="district" multiple>
                       <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name
                         === 'all' ? 'Semua
                         District' :
@@ -323,7 +323,7 @@
                     </mat-select>
                   </mat-form-field>
                   <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-                    <mat-select placeholder="Territory" formControlName="territory" multiple>
+                    <mat-select placeholder="{{'global.area.territory' | translate}}" formControlName="territory" multiple>
                       <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['territory'])">{{item.name
                         === 'all' ? 'Semua
                         Territory' :
