--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -28,11 +28,11 @@
             </mat-error> <!-- // TODO -->
           </mat-form-field>
           <mat-form-field fxFlex="50" class="is-light form-primary" *ngIf="!isLoyaltySelected()">
-            <mat-select formControlName="is_smoker" placeholder="Tipe Consumer">
+            <mat-select formControlName="is_smoker" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text14' | translate}}">
               <mat-option *ngFor="let item of listSmoker" [value]="item.value">{{item.name}}</mat-option>
             </mat-select>
             <mat-error *ngIf="formConsumerGroup.controls['is_smoker'].hasError('required') && formConsumerGroup.controls['is_smoker'].touched">
-              Tipe Consumer harus diisi
+              {{'iklan_dalam_aplikasi.spanduk_online.text14' | translate}} harus diisi
             </mat-error> <!-- // TODO -->
           </mat-form-field>
         </div>
@@ -134,7 +134,7 @@
                 Dari harus diisi
               </mat-error> <!-- // TODO -->
               <mat-error *ngIf="formConsumerGroup.controls['age_consumer_from'].hasError('min') && formConsumerGroup.get('age_consumer_from').touched">
-                Tidak boleh kurang dari {{formConsumerGroup.controls['is_smoker'].value === 'yes' ? '18' : '0'}}
+                {{'iklan_dalam_aplikasi.spanduk_online.cannot_less_than' | translate}} {{formConsumerGroup.controls['is_smoker'].value === 'yes' ? '18' : '0'}}
               </mat-error> <!-- // TODO -->
             </mat-form-field>
             <mat-form-field class="is-light form-primary" fxFlex.xs="50">
@@ -143,7 +143,7 @@
                 Sampai harus diisi
               </mat-error> <!-- // TODO -->
               <mat-error *ngIf="formConsumerGroup.controls['age_consumer_to'].hasError('min') && formConsumerGroup.get('age_consumer_to').touched">
-                Tidak boleh kurang dari minimal batasan umur yg telah di isi
+                {{'iklan_dalam_aplikasi.spanduk_online.cannot_less_than' | translate}} minimal batasan umur yg telah di isi
               </mat-error> <!-- // TODO -->
             </mat-form-field>
           </div>
@@ -181,7 +181,7 @@
 
       <div fxLayout="row" class="pb-24 px-12" *ngIf="!isVoucherAutomation.value === true">
         <mat-checkbox class="mt-4 ml-4 mb-8" (change)="isChangeTargetAudience($event)"
-          formControlName="isTargetAudience" [disabled]="!detailVoucher?.is_enable_panel_customer">Target Audience</mat-checkbox>
+          formControlName="isTargetAudience" [disabled]="!detailVoucher?.is_enable_panel_customer">{{'iklan_dalam_aplikasi.spanduk_online.text26' | translate}}</mat-checkbox>
       </div>
 
       <div *ngIf="formConsumerGroup.get('isTargetAudience').value === false && !isLoyaltySelected()">
@@ -202,7 +202,7 @@
             </div>
             <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch" *ngIf="detailVoucher?.is_enable_panel_customer">
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="National" formControlName="national" [disabled]="disableForm">
+                <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_national'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -212,7 +212,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="generateList('region', wil.get('zone').value, i, 'selection')" [disabled]="disableForm">
+                <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" (selectionChange)="generateList('region', wil.get('zone').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_zone'].value" [value]="item.id">{{item.name}}
                   </mat-option>
                 </mat-select>
@@ -221,7 +221,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Regional" formControlName="region" (selectionChange)="generateList('area', wil.get('region').value, i, 'selection')" [disabled]="disableForm">
+                <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" (selectionChange)="generateList('area', wil.get('region').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_region'].value" [value]="item.id">{{item.name}}
                   </mat-option>
                 </mat-select>
@@ -230,7 +230,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Area" formControlName="area" (selectionChange)="generateList('salespoint', wil.get('area').value, i, 'selection')" [disabled]="disableForm">
+                <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" (selectionChange)="generateList('salespoint', wil.get('area').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_area'].value" [value]="item.id">{{item.name}}
                   </mat-option>
                 </mat-select>
@@ -239,7 +239,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="generateList('district', wil.get('salespoint').value, i, 'selection')" [disabled]="disableForm">
+                <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" (selectionChange)="generateList('district', wil.get('salespoint').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_salespoint'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -249,7 +249,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="District" formControlName="district" (selectionChange)="generateList('territory', wil.get('district').value, i, 'selection')" [disabled]="disableForm">
+                <mat-select placeholder="{{'global.area.district' | translate}}" formControlName="district" (selectionChange)="generateList('territory', wil.get('district').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_district'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -259,7 +259,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Territory" formControlName="territory" [disabled]="disableForm">
+                <mat-select placeholder="{{'global.area.territory' | translate}}" formControlName="territory" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_territory'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -272,25 +272,25 @@
             
             <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutAlign="space-between stretch" fxLayoutGap="10px" fxLayoutGap.lt-md="0px" *ngIf="!detailVoucher?.is_enable_panel_customer">
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <input matInput placeholder="National" formControlName="national" readonly>
+                <input matInput placeholder="{{'global.area.national' | translate}}" formControlName="national" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <input matInput placeholder="Zone" formControlName="zone" readonly>
+                <input matInput placeholder="{{'global.area.zone' | translate}}" formControlName="zone" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <input matInput placeholder="Regional" formControlName="region" readonly>
+                <input matInput placeholder="{{'global.area.regional' | translate}}" formControlName="region" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="31%"  class="is-light form-primary">
-                <input matInput placeholder="Area" formControlName="area" readonly>
+                <input matInput placeholder="{{'global.area.area' | translate}}" formControlName="area" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="31%"  class="is-light form-primary">
-                <input matInput placeholder="Salespoint" formControlName="salespoint" readonly>
+                <input matInput placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="31%"  class="is-light form-primary">
-                <input matInput placeholder="District" formControlName="district" readonly>
+                <input matInput placeholder="{{'global.area.district' | translate}}" formControlName="district" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="31%"  class="is-light form-primary">
-                <input matInput placeholder="Territory" formControlName="territory" readonly>
+                <input matInput placeholder="{{'global.area.territory' | translate}}" formControlName="territory" readonly>
               </mat-form-field>
             </div>
           </div>
@@ -302,19 +302,19 @@
           <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="pt-16"
             fxLayoutGap="20px" fxLayoutGap.lt-md="0px" style="margin-left: 25px; margin-right: 25px;">
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="National" formControlName="national">
+              <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national">
                 <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Zone" formControlName="zone" multiple>
+              <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   Zona' :
                   item.code}}</mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Regional" formControlName="region" multiple>
+              <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   Regional'
                   :
@@ -322,7 +322,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Area" formControlName="area" multiple>
+              <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   Area'
                   :
@@ -330,7 +330,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+              <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name === 'all' ?
                   'Semua
                   Salespoint'
@@ -339,7 +339,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="District" formControlName="district" multiple>
+              <mat-select placeholder="{{'global.area.district' | translate}}" formControlName="district" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   District'
                   :
@@ -347,7 +347,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select placeholder="Territory" formControlName="territory" multiple>
+              <mat-select placeholder="{{'global.area.territory' | translate}}" formControlName="territory" multiple>
                 <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name === 'all' ? 'Semua
                   Territori'
                   :
