--- a/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
@@ -6,53 +6,53 @@
     <div fxLayout="row" class="pb-24 px-12">
       <mat-checkbox class="mt-4 ml-4 mb-8" (change)="isChangeTargetAudience($event)"
         [formControl]="isTargetAudience" [disabled]="!detailVoucher?.is_enable_panel_retailer || disableForm">
-        Target Audience</mat-checkbox>
+        {{'iklan_dalam_aplikasi.spanduk_online.text26' | translate}}</mat-checkbox>
     </div>
 
     <form [formGroup]="formFilter" autoComplete="off" *ngIf="(detailVoucher?.is_target_audience_retailer && !detailVoucher?.is_enable_panel_retailer) || (detailVoucher?.is_enable_panel_retailer)">
       <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutAlign="space-between stretch" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
         <mat-form-field fxFlex="31%" class="is-light form-primary">
-          <mat-select placeholder="National" formControlName="national" multiple>
+          <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national" multiple>
             <mat-option [value]="item.id" *ngFor="let item of listLevelArea">{{item.name}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxFlex="31%" class="is-light form-primary">
-          <mat-select placeholder="Zone" formControlName="zone" multiple>
+          <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ? 'Semua
               Zona' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxFlex="31%" class="is-light form-primary">
-          <mat-select placeholder="Regional" formControlName="region" multiple>
+          <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all' ? 'Semua
               Regional' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxFlex="31%"  class="is-light form-primary">
-          <mat-select placeholder="Area" formControlName="area" multiple>
+          <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ? 'Semua
               Area' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxFlex="31%"  class="is-light form-primary">
-          <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+          <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">{{item.name === 'all' ? 'Semua
               Salespoint' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxFlex="31%"  class="is-light form-primary">
-          <mat-select placeholder="District" formControlName="district" multiple>
+          <mat-select placeholder="{{'global.area.district' | translate}}" formControlName="district" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name === 'all' ? 'Semua
               District' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxFlex="31%"  class="is-light form-primary">
-          <mat-select placeholder="Territory" formControlName="teritory" multiple>
+          <mat-select placeholder="{{'global.area.territory' | translate}}" formControlName="teritory" multiple>
             <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['teritory'])">{{item.name === 'all' ? 'Semua
               Territory' :
               item.code}}</mat-option>
@@ -71,25 +71,25 @@
     <form [formGroup]="formFilter" autoComplete="off" *ngIf="!detailVoucher?.is_target_audience_retailer && !detailVoucher?.is_enable_panel_retailer">
       <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutAlign="space-between stretch" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
         <mat-form-field fxFlex="31%" class="is-light form-primary">
-          <input matInput placeholder="National" formControlName="national" readonly>
+          <input matInput placeholder="{{'global.area.national' | translate}}" formControlName="national" readonly>
         </mat-form-field>
         <mat-form-field fxFlex="31%" class="is-light form-primary">
-          <input matInput placeholder="Zone" formControlName="zone" readonly>
+          <input matInput placeholder="{{'global.area.zone' | translate}}" formControlName="zone" readonly>
         </mat-form-field>
         <mat-form-field fxFlex="31%" class="is-light form-primary">
-          <input matInput placeholder="Regional" formControlName="region" readonly>
+          <input matInput placeholder="{{'global.area.regional' | translate}}" formControlName="region" readonly>
         </mat-form-field>
         <mat-form-field fxFlex="31%"  class="is-light form-primary">
-          <input matInput placeholder="Area" formControlName="area" readonly>
+          <input matInput placeholder="{{'global.area.area' | translate}}" formControlName="area" readonly>
         </mat-form-field>
         <mat-form-field fxFlex="31%"  class="is-light form-primary">
-          <input matInput placeholder="Salespoint" formControlName="salespoint" readonly>
+          <input matInput placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" readonly>
         </mat-form-field>
         <mat-form-field fxFlex="31%"  class="is-light form-primary">
-          <input matInput placeholder="District" formControlName="district" readonly>
+          <input matInput placeholder="{{'global.area.district' | translate}}" formControlName="district" readonly>
         </mat-form-field>
         <mat-form-field fxFlex="31%"  class="is-light form-primary">
-          <input matInput placeholder="Territory" formControlName="teritory" readonly>
+          <input matInput placeholder="{{'global.area.territory' | translate}}" formControlName="teritory" readonly>
         </mat-form-field>
       </div>
     </form>
