--- a/src/app/pages/remote-call-activation/route-plan/route-plan.component.html
+++ b/src/app/pages/remote-call-activation/route-plan/route-plan.component.html
@@ -62,12 +62,12 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="National" formControlName="national">
+                  <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national">
                     <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Zone" formControlName="zone" multiple>
+                  <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name ===
                       'all'
                       ? 'Semua
@@ -76,7 +76,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Regional" formControlName="region" multiple>
+                  <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name ===
                       'all' ? 'Semua
                       Regional'
@@ -85,7 +85,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Area" formControlName="area" multiple>
+                  <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name ===
                       'all'
                       ? 'Semua
@@ -95,7 +95,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+                  <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name
                       ===
                       'all' ?
@@ -106,7 +106,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="District" formControlName="district" multiple>
+                  <mat-select placeholder="{{'global.area.district' | translate}}" formControlName="district" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{item.name
                       ===
                       'all' ? 'Semua
@@ -116,7 +116,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Territory" formControlName="territory" multiple>
+                  <mat-select placeholder="{{'global.area.territory' | translate}}" formControlName="territory" multiple>
                     <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name
                       ===
                       'all' ? 'Semua
@@ -136,7 +136,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="District" formControlName="district_code">
+                  <mat-select placeholder="{{'global.area.district' | translate}}" formControlName="district_code">
                     <!-- <mat-option *ngIf="districts.length > 0"
                       [value]="{value: formFilter.get('city').value, key: 'city'}">
                       Semua District
