--- a/src/app/pages/user-management/private-label/panel-mitra/edit/panel-mitra-edit.component.html
+++ b/src/app/pages/user-management/private-label/panel-mitra/edit/panel-mitra-edit.component.html
@@ -74,12 +74,12 @@
       <form [formGroup]="formFilter" autoComplete="off">
         <div class="pl-16 pr-16 mt-12 bb" fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="20px">
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-            <mat-select placeholder="National" formControlName="national">
+            <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national">
               <mat-option [value]="item.id" *ngFor="let item of listLevelArea">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-            <mat-select placeholder="Zone" formControlName="zone" multiple>
+            <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
               <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ?
                 'Semua
                 Zona' :
@@ -87,7 +87,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-            <mat-select placeholder="Regional" formControlName="region" multiple>
+            <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" multiple>
               <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all'
                 ? 'Semua
                 Regional' :
@@ -95,7 +95,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-            <mat-select placeholder="Area" formControlName="area" multiple>
+            <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
               <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ?
                 'Semua
                 Area' :
@@ -103,7 +103,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-            <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+            <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" multiple>
               <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">{{item.name ===
                 'all' ? 'Semua
                 Salespoint' :
@@ -111,7 +111,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-            <mat-select placeholder="District" formControlName="district" multiple>
+            <mat-select placeholder="{{'global.area.district' | translate}}" formControlName="district" multiple>
               <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name ===
                 'all' ? 'Semua
                 District' :
@@ -119,7 +119,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-            <mat-select placeholder="Territory" formControlName="territory" multiple>
+            <mat-select placeholder="{{'global.area.territory' | translate}}" formControlName="territory" multiple>
               <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['territory'])">{{item.name ===
                 'all' ? 'Semua
                 Territory' :
