--- a/src/app/pages/user-management/private-label/panel-partnership/edit/panel-partnership-edit.component.html
+++ b/src/app/pages/user-management/private-label/panel-partnership/edit/panel-partnership-edit.component.html
@@ -91,12 +91,12 @@
                 fxLayoutGap.lt-md="0px"
               >
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="National" formControlName="national">
+                  <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national">
                     <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Zone" formControlName="zone" multiple>
+                  <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
                     <mat-option
                       *ngFor="let item of filteringGeotree(list['zone'])"
                       [value]="item.id"
@@ -109,7 +109,7 @@
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
                   <mat-select
-                    placeholder="Regional"
+                    placeholder="{{'global.area.regional' | translate}}"
                     formControlName="region"
                     multiple
                   >
@@ -126,7 +126,7 @@
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Area" formControlName="area" multiple>
+                  <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
                     <mat-option
                       *ngFor="let item of filteringGeotree(list['area'])"
                       [value]="item.id"
@@ -139,7 +139,7 @@
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
                   <mat-select
-                    placeholder="Salespoint"
+                    placeholder="{{'global.area.salespoint' | translate}}"
                     formControlName="salespoint"
                     multiple
                   >
@@ -157,7 +157,7 @@
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
                   <mat-select
-                    placeholder="District"
+                    placeholder="{{'global.area.district' | translate}}"
                     formControlName="district"
                     multiple
                   >
@@ -175,7 +175,7 @@
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
                   <mat-select
-                    placeholder="Territory"
+                    placeholder="{{'global.area.territory' | translate}}"
                     formControlName="territory"
                     multiple
                   >
