--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -205,7 +205,7 @@
           </div>
 
           <!-- <mat-form-field fxFlex="100" class="is-light">
-                <input matInput type="text" placeholder="Area" formControlName="area_code">
+                <input matInput type="text" placeholder="{{'global.area.area' | translate}}" formControlName="area_code">
                 <mat-error *ngIf="formWs.controls['area_code'].hasError('required') && formWs.controls['area_code'].touched ">
                   Area {{ ls.locale.global.messages.mandatory_text }}
                 </mat-error>
