--- a/src/app/shared/import-audience/import-audience.component.html
+++ b/src/app/shared/import-audience/import-audience.component.html
@@ -5,7 +5,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
 
       <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <span>{{ls.locale.global.label.upload_file}} XLS</span>
+        <span>{{'global.label.upload_file' | translate}} XLS</span>
       </div>
 
     </div>
@@ -23,7 +23,7 @@
       <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
         <mat-icon class="secondary-text s-48">attach_file</mat-icon>
         <br>
-        <span matPrefix>{{ls.locale.global.messages.file_browse_label}}
+        <span matPrefix>{{'global.messages.file_browse_label' | translate}}
            
         </span>
       </div>
@@ -37,12 +37,12 @@
         <thead>
           <tr>
             <th nowrap>ID</th>
-            <th nowrap>Name</th>
-            <th nowrap>Kode</th>
-            <th nowrap>Owner</th>
-            <th nowrap>Tipe</th>
-            <th nowrap>Valid</th>
-            <th nowrap>{{ls.locale.global.messages.invalid_reason}}</th>
+            <th nowrap>{{'global.label.name' | translate}}</th>
+            <th nowrap>{{'global.label.code' | translate}}</th>
+            <th nowrap>{{'global.label.owner_name' | translate}}</th>
+            <th nowrap>{{'global.label.type' | translate}}</th>
+            <th nowrap>{{'global.label.valid'}}</th>
+            <th nowrap>{{'global.messages.invalid_reason' | translate}}</th>
           </tr>
         </thead>
         <tbody>
@@ -63,7 +63,7 @@
               {{ item.type }}
             </td>
             <td nowrap>
-              {{ item.flag || item.is_valid ? 'VALID' : 'TIDAK VALID' }}
+              {{ item.flag || item.is_valid ? ('global.label.valid' | translate) : ('global.label.invalid' | translate) }}
             </td>
             <td nowrap>
               {{ item.reason }}
@@ -71,13 +71,13 @@
           </tr>
           <tr *ngIf="rows.length === 0">
             <td style="text-align:center" colspan="10">
-              {{ls.locale.global.messages.file_unselected_warn}}
+              {{'global.messages.file_unselected_warn' | translate}}
             </td>
           </tr>
         </tbody>
       </table>
     </div>
-    <div *ngIf="counter" style="margin-top: 5px;"><b>{{counter.total}} Total</b>, {{counter.valid}} Valid, {{counter.invalid}} Invalid</div>
+    <div *ngIf="counter" style="margin-top: 5px;"><b>{{counter.total}} {{'global.label.total' | translate}}</b>, {{counter.valid}} {{'global.label.valid' | translate}}, {{counter.invalid}} {{'global.label.invalid' | translate}}</div>
   </div>
 
   <div class="border-top">
@@ -85,9 +85,9 @@
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
         fxLayoutGap.lt-md="10px" fxFlex="1 0 auto">
         <button type="button" mat-raised-button color="primary" (click)="submit()"
-          [disabled]="rows.length === 0 || invalidData > 0">{{ls.locale.global.button.send}}</button>
+          [disabled]="rows.length === 0 || invalidData > 0">{{'global.button.send' | translate}}</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
-          [disabled]="uploading">Batal</button>
+          [disabled]="uploading">{{'global.button.cancel' | translate}}</button>
       </div>
     </div>
   </div>
